Update Update New

--- a/RL_T5_Trainer.ipynb
+++ b/RL_T5_Trainer.ipynb
@@ -12136,6 +12136,190 @@
     "\n",
     "        # Compute log probabilities for the generated summary\n",
     "        outputs = self.model(input_ids=input_ids, labels=self.tokenizer(generated_summary, return_tensors='pt').input_ids)\n",
+    "        log_probs = outputs.loss \n",
+    "\n",
+    "        # Policy gradient update\n",
+    "        policy_loss = log_probs * reward\n",
+    "\n",
+    "        # Zero gradients, backpropagate, and optimize\n",
+    "        self.optimizer.zero_grad()\n",
+    "        policy_loss.backward()\n",
+    "        self.optimizer.step()\n",
+    "\n",
+    "        return reward, generated_summary\n",
+    "\n",
+    "    def train(self, num_epochs=3, batch_size=8):\n",
+    "        print(\"Starting RL Training...\")\n",
+    "        \n",
+    "        # Shuffle dataset\n",
+    "        indices = list(range(len(self.dataset)))\n",
+    "        random.shuffle(indices)\n",
+    "\n",
+    "        total_rewards = []\n",
+    "        for epoch in range(num_epochs):\n",
+    "            epoch_rewards = []\n",
+    "            \n",
+    "            for i in range(0, len(indices), batch_size):\n",
+    "                batch_indices = indices[i:i+batch_size]\n",
+    "                \n",
+    "                for idx in batch_indices:\n",
+    "                    # Prepare input\n",
+    "                    article = self.dataset[idx]['article']\n",
+    "                    reference_summary = self.dataset[idx]['highlights']\n",
+    "                    \n",
+    "                    # Tokenize input\n",
+    "                    input_ids = self.tokenizer(\n",
+    "                        article, \n",
+    "                        return_tensors='pt', \n",
+    "                        truncation=True, \n",
+    "                        max_length=512\n",
+    "                    ).input_ids\n",
+    "                    \n",
+    "                    # RL update\n",
+    "                    reward, generated_summary = self.policy_gradient_update(input_ids, reference_summary)\n",
+    "                    \n",
+    "                    epoch_rewards.append(reward)\n",
+    "                    \n",
+    "                    print(f\"Epoch {epoch+1}, Sample {i+batch_indices.index(idx)+1}\")\n",
+    "                    print(f\"Generated Summary: {generated_summary}\")\n",
+    "                    print(f\"Reward: {reward}\\n\")\n",
+    "            \n",
+    "            # Compute and store average reward for the epoch\n",
+    "            avg_reward = np.mean(epoch_rewards)\n",
+    "            total_rewards.append(avg_reward)\n",
+    "            print(f\"Epoch {epoch+1} Average Reward: {avg_reward}\")\n",
+    "        \n",
+    "        return total_rewards\n",
+    "\n",
+    "def main():\n",
+    "    # Set random seed\n",
+    "    set_seed(42)\n",
+    "\n",
+    "    # Load dataset\n",
+    "    dataset = load_dataset(\"cnn_dailymail\", \"3.0.0\", cache_dir=\"./datasets/cnn_dailymail_clean\")\n",
+    "\n",
+    "    # Load pre-trained T5 model\n",
+    "    model = T5ForConditionalGeneration.from_pretrained(\"./summarization_model\")\n",
+    "    tokenizer = T5Tokenizer.from_pretrained(\"./summarization_model\")\n",
+    "\n",
+    "    # Create RL trainer\n",
+    "    rl_trainer = T5RLTrainer(model, tokenizer, dataset['train'])\n",
+    "\n",
+    "    # Train with RL\n",
+    "    rewards = rl_trainer.train(num_epochs=1, batch_size=8)\n",
+    "\n",
+    "    # Save the RL-fine-tuned model\n",
+    "    model.save_pretrained(\"./t5_rl_summarization_model\")\n",
+    "    tokenizer.save_pretrained(\"./t5_rl_summarization_model\")\n",
+    "\n",
+    "    print(\"RL Training Complete. Rewards:\", rewards)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Set random seeds for reproducibility\n",
+    "def set_seed(seed=42):\n",
+    "    random.seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    torch.manual_seed(seed)\n",
+    "    if torch.cuda.is_available():\n",
+    "        torch.cuda.manual_seed_all(seed)\n",
+    "\n",
+    "# Reward calculation utilities\n",
+    "class RewardCalculator:\n",
+    "    def __init__(self):\n",
+    "        self.rouge_scorer = rouge_scorer.RougeScorer([\"rouge1\", \"rougeL\"], use_stemmer=True)\n",
+    "        self.semantic_model = SentenceTransformer(\"paraphrase-MiniLM-L6-v2\")\n",
+    "        self.nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "    def length_reward(self, generated_summary, reference_summary):\n",
+    "        \"\"\"Reward based on summary length similarity.\"\"\"\n",
+    "        gen_length = len(generated_summary.split())\n",
+    "        ref_length = len(reference_summary.split())\n",
+    "        return max(0, 1 - abs(gen_length - ref_length) / ref_length)\n",
+    "\n",
+    "    def keyword_coverage(self, generated_summary, reference_summary):\n",
+    "        \"\"\"Compute keyword coverage reward.\"\"\"\n",
+    "        vectorizer = CountVectorizer(stop_words='english', max_features=5)\n",
+    "        vectorizer.fit([reference_summary])\n",
+    "        keywords = set(vectorizer.get_feature_names_out())\n",
+    "        gen_words = set(generated_summary.split())\n",
+    "        return len(keywords & gen_words) / len(keywords) if keywords else 0\n",
+    "\n",
+    "    def entity_coverage(self, generated_summary, reference_summary):\n",
+    "        \"\"\"Compute entity coverage reward.\"\"\"\n",
+    "        ref_doc = self.nlp(reference_summary)\n",
+    "        gen_doc = self.nlp(generated_summary)\n",
+    "\n",
+    "        ref_entities = {ent.text for ent in ref_doc.ents}\n",
+    "        gen_entities = {ent.text for ent in gen_doc.ents}\n",
+    "\n",
+    "        return len(ref_entities & gen_entities) / len(ref_entities) if ref_entities else 1\n",
+    "\n",
+    "    def calculate_reward(self, generated_summary, reference_summary):\n",
+    "        \"\"\"Calculate comprehensive reward.\"\"\"\n",
+    "        # ROUGE score\n",
+    "        rouge_scores = self.rouge_scorer.score(generated_summary, reference_summary)\n",
+    "        rouge_reward = rouge_scores[\"rouge1\"].fmeasure + rouge_scores[\"rougeL\"].fmeasure\n",
+    "\n",
+    "        # Semantic similarity\n",
+    "        generated_embedding = self.semantic_model.encode([generated_summary])\n",
+    "        reference_embedding = self.semantic_model.encode([reference_summary])\n",
+    "        semantic_reward = cosine_similarity(generated_embedding, reference_embedding)[0][0]\n",
+    "\n",
+    "        # Additional rewards\n",
+    "        length_penalty = self.length_reward(generated_summary, reference_summary)\n",
+    "        keyword_cov = self.keyword_coverage(generated_summary, reference_summary)\n",
+    "        entity_cov = self.entity_coverage(generated_summary, reference_summary)\n",
+    "\n",
+    "        # Weighted combined reward\n",
+    "        return (0.4 * rouge_reward + \n",
+    "                0.3 * semantic_reward + \n",
+    "                0.1 * length_penalty + \n",
+    "                0.1 * keyword_cov + \n",
+    "                0.1 * entity_cov)\n",
+    "\n",
+    "class T5RLTrainer:\n",
+    "    def __init__(self, model, tokenizer, dataset, lr=5e-5):\n",
+    "        self.model = model\n",
+    "        self.tokenizer = tokenizer\n",
+    "        self.dataset = dataset\n",
+    "        self.reward_calculator = RewardCalculator()\n",
+    "        \n",
+    "        # Optimizer\n",
+    "        self.optimizer = AdamW(self.model.parameters(), lr=lr)\n",
+    "\n",
+    "    def generate_summary(self, input_ids, max_length=150):\n",
+    "        \"\"\"Generate summary using the model.\"\"\"\n",
+    "        outputs = self.model.generate(\n",
+    "            input_ids, \n",
+    "            max_length=max_length, \n",
+    "            num_return_sequences=1, \n",
+    "            do_sample=True\n",
+    "        )\n",
+    "        return self.tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
+    "\n",
+    "    def policy_gradient_update(self, input_ids, reference_summary):\n",
+    "        \"\"\"Perform policy gradient update.\"\"\"\n",
+    "        # Ensure model is in training mode\n",
+    "        self.model.train()\n",
+    "\n",
+    "        # Generate summary\n",
+    "        generated_summary = self.generate_summary(input_ids)\n",
+    "\n",
+    "        # Calculate reward\n",
+    "        reward = self.reward_calculator.calculate_reward(generated_summary, reference_summary)\n",
+    "\n",
+    "        # Compute log probabilities for the generated summary\n",
+    "        outputs = self.model(input_ids=input_ids, labels=self.tokenizer(generated_summary, return_tensors='pt').input_ids)\n",
     "        log_probs = outputs.loss  # This is the negative log-likelihood\n",
     "\n",
     "        # Policy gradient update (simplified version)\n",
